--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,33 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is what I know:\n",
-      "Director: 크리스토퍼 놀란\n",
-      "Stars: 매튜 맥커너히, 앤 해서웨이\n",
-      "Genre: SF, 드라마\n",
-      "Budget: 1억 6500만 달러"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessageChunk(content='Here is what I know:\\nDirector: 크리스토퍼 놀란\\nStars: 매튜 맥커너히, 앤 해서웨이\\nGenre: SF, 드라마\\nBudget: 1억 6500만 달러')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
@@ -42,38 +19,23 @@
     "    ],\n",
     ")\n",
     "\n",
-    "#os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-    "\n",
-    "\n",
     "examples = [\n",
     "    {\n",
-    "        \"movie\": \"Titanic\",\n",
+    "        \"movie\": \"Top Gun\",\n",
     "        \"answer\": \"\"\"\n",
-    "        Here is what I know:\n",
-    "        Director: 제임스 카메론\n",
-    "        stars: 레오나르도 디카프리오, 케이트 윈슬렛\n",
-    "        Genre: 멜로, 로맨스, 드라마\n",
-    "        budget: 2억 달러\n",
+    "            🛩️👨‍✈️🔥\n",
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"movie\": \"Inception\",\n",
+    "        \"movie\": \"The Godfather\",\n",
     "        \"answer\": \"\"\"\n",
-    "        Here is what I know:\n",
-    "        Director: 크리스토퍼 놀란\n",
-    "        stars: 레오나르도 디카프리오, 조셉 고든레빗\n",
-    "        Genre: 액션, 어드벤처, SF\n",
-    "        budget: 1억 6000만 달러\n",
+    "            👨‍👨‍👦🔫🍝\n",
     "        \"\"\",\n",
     "    },\n",
     "    {\n",
-    "        \"movie\": \"Inside out2\",\n",
+    "        \"movie\": \"Interstella\",\n",
     "        \"answer\": \"\"\"\n",
-    "        Here is what I know:\n",
-    "        Director: 켈시 맨\n",
-    "        stars: 에이미 폴러, 마야 호크\n",
-    "        Genre: 애니메이션, 코미디\n",
-    "        budget: 2억 달러\n",
+    "            🌌🚀⏳\n",
     "        \"\"\",\n",
     "    },\n",
     "]\n",
@@ -81,7 +43,7 @@
     "\n",
     "example_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
-    "        (\"human\", \"What do you know about {movie}?\"),\n",
+    "        (\"human\", \"{movie}를 3개의 이모티콘으로 표현한다면?\"),\n",
     "        (\"ai\", \"{answer}\"),\n",
     "    ]\n",
     ")\n",
@@ -93,7 +55,7 @@
     "\n",
     "final_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
-    "        (\"system\", \"You are a movie expert, you give short answers.\"),\n",
+    "        (\"system\", \"You are a movie expert.\"),\n",
     "        example_prompt,\n",
     "        (\"human\", \"What do you know about {movie}?\"),\n",
     "    ]\n",
@@ -101,7 +63,7 @@
     "\n",
     "chain = final_prompt | chat\n",
     "\n",
-    "chain.invoke({\"movie\": \"인터스텔라\"})"
+    "chain.invoke({\"movie\": \"킹콩\"})"
    ]
   }
  ],
