--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,68 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'chat_history': 'Human: Hi\\nAI: How are you??'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.few_shot import FewShotChatMessagePromptTemplate\n",
     "from langchain.callbacks import StreamingStdOutCallbackHandler\n",
-    "from langchain.prompts import ChatMessagePromptTemplate, ChatPromptTemplate\n",
+    "from langchain.memory import ConversationBufferMemory\n",
     "\n",
-    "chat = ChatOpenAI(\n",
+    "\n",
+    "llm = ChatOpenAI(\n",
     "    temperature=0.1,\n",
+    "    model_name=\"gpt-3.5-turbo-1106\",\n",
     "    streaming=True,\n",
     "    callbacks=[\n",
     "        StreamingStdOutCallbackHandler(),\n",
     "    ],\n",
     ")\n",
     "\n",
-    "examples = [\n",
-    "    {\n",
-    "        \"movie\": \"Top Gun\",\n",
-    "        \"answer\": \"\"\"\n",
-    "            🛩️👨‍✈️🔥\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"movie\": \"The Godfather\",\n",
-    "        \"answer\": \"\"\"\n",
-    "            👨‍👨‍👦🔫🍝\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"movie\": \"Interstella\",\n",
-    "        \"answer\": \"\"\"\n",
-    "            🌌🚀⏳\n",
-    "        \"\"\",\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "\n",
-    "example_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"human\", \"{movie}를 3개의 이모티콘으로 표현한다면?\"),\n",
-    "        (\"ai\", \"{answer}\"),\n",
-    "    ]\n",
+    "memory = ConversationBufferMemory(\n",
+    "    llm=llm,\n",
+    "    memory_key=\"chat_history\",\n",
     ")\n",
     "\n",
-    "example_prompt = FewShotChatMessagePromptTemplate(\n",
-    "    example_prompt=example_prompt,\n",
-    "    examples=examples,\n",
+    "memory.save_context({\"input\":\"Hi\"}, {\"output\":\"How are you??\"})\n",
+    "\n",
+    "memory.load_memory_variables({})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\gpwns\\Git\\FULLSTACK-GPT\\env\\Lib\\site-packages\\langchain\\chains\\llm.py:349: UserWarning: The apply_and_parse method is deprecated, instead pass an output parser directly to LLMChain.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'chat_history': 'Human: Who is Julia?\\nAI: Julia is a character in the text that Winston is thinking of transferring his punishment to in order to avoid the rats. She is the person he cares about the most in the world and is willing to endure any torture in her place.'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.document_loaders import UnstructuredFileLoader\n",
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.embeddings import OpenAIEmbeddings, CacheBackedEmbeddings\n",
+    "from langchain.vectorstores import FAISS\n",
+    "from langchain.storage import LocalFileStore\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "\n",
+    "llm = ChatOpenAI()\n",
+    "\n",
+    "cache_dir = LocalFileStore(\"./.cache/\")\n",
+    "\n",
+    "splitter = CharacterTextSplitter.from_tiktoken_encoder(\n",
+    "    separator=\"\\n\",\n",
+    "    chunk_size=600,\n",
+    "    chunk_overlap=100,\n",
+    ")\n",
+    "loader = UnstructuredFileLoader(\"./files/document.txt\")\n",
+    "\n",
+    "docs = loader.load_and_split(text_splitter=splitter)\n",
+    "\n",
+    "embeddings = OpenAIEmbeddings()\n",
+    "\n",
+    "cached_embeddings = CacheBackedEmbeddings.from_bytes_store(embeddings, cache_dir)\n",
+    "\n",
+    "vectorstore = FAISS.from_documents(docs, cached_embeddings)\n",
+    "\n",
+    "\n",
+    "memory = ConversationBufferMemory(\n",
+    "    llm=llm,\n",
+    "    memory_key=\"chat_history\",\n",
     ")\n",
     "\n",
-    "final_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [\n",
-    "        (\"system\", \"You are a movie expert.\"),\n",
-    "        example_prompt,\n",
-    "        (\"human\", \"What do you know about {movie}?\"),\n",
-    "    ]\n",
+    "chain = RetrievalQA.from_chain_type(\n",
+    "    llm=llm,\n",
+    "    chain_type=\"map_rerank\",\n",
+    "    retriever=vectorstore.as_retriever(),\n",
     ")\n",
     "\n",
-    "chain = final_prompt | chat\n",
+    "output = chain.run(\"Who is Julia?\")\n",
     "\n",
-    "chain.invoke({\"movie\": \"킹콩\"})"
+    "memory.save_context({\"input\":\"Who is Julia?\"}, {\"output\":output})\n",
+    "\n",
+    "memory.load_memory_variables({})"
    ]
   }
  ],
